divides now between normal- and veteran-server

--- a/html/overview.html
+++ b/html/overview.html
@@ -10,7 +10,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://cdn.rawgit.com/olton/Metro-UI-CSS/6595247250e80f27c590e9ba89522f1676a8297d/build/css/metro-all.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-        <link rel="stylesheet" href="css/own.css?20180818">
+        <link rel="stylesheet" href="css/own.css?20180819">
 
         <!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -19,14 +19,14 @@
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
         <script src="https://www.amcharts.com/lib/3/serial.js"></script>
         <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-        <script src="js/cookies.js?20180818"></script>
-        <script src="js/languages.js?20180818"></script>
-        <script src="js/backend.js?20180818"></script>
-        <script src="js/dropdowns.js?20180818"></script>
-        <script src="js/tabsNavigation.js?20180818"></script>
-        <script src="js/tabsContent.js?20180818"></script>
-        <script src="js/charts.js?20180818"></script>
-        <script src="js/overview.js?20180818"></script>
+        <script src="js/cookies.js?20180819"></script>
+        <script src="js/languages.js?20180819"></script>
+        <script src="js/backend.js?20180819"></script>
+        <script src="js/dropdowns.js?20180819"></script>
+        <script src="js/tabsNavigation.js?20180819"></script>
+        <script src="js/tabsContent.js?20180819"></script>
+        <script src="js/charts.js?20180819"></script>
+        <script src="js/overview.js?20180819"></script>
     </head>
     <body>
         <div class="container-fluid text-center own-container">
@@ -86,6 +86,8 @@
                     <div id="ChartPlayerShoots" class="own-chart"></div><br/>
                     <div id="ChartPlayerValues" class="own-chart"></div><br/>
                     <div id="ChartPlayerCps" class="own-chart"></div><br/>
+                    <div id="ChartPlayerVps" class="own-chart"></div><br/>
+                    <div id="ChartPlayerLps" class="own-chart"></div><br/>
                     <div id="ChartPlayerFunds" class="own-chart"></div><br/>
                 </div>
             </div>
