added 4th tab-content

--- a/html/overview.html
+++ b/html/overview.html
@@ -10,7 +10,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://cdn.rawgit.com/olton/Metro-UI-CSS/6595247250e80f27c590e9ba89522f1676a8297d/build/css/metro-all.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-        <link rel="stylesheet" href="css/overview.css?20180821">
+        <link rel="stylesheet" href="css/overview.css?20180824">
 
         <!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -19,15 +19,15 @@
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
         <script src="https://www.amcharts.com/lib/3/serial.js"></script>
         <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-        <script src="js/cookies.js?20180821"></script>
-        <script src="js/languages.js?20180821"></script>
-        <script src="js/backend.js?20180821"></script>
-        <script src="js/dropdowns.js?20180821"></script>
-        <script src="js/tabsNavigation.js?20180821"></script>
-        <script src="js/tabsContent.js?20180821"></script>
-        <script src="js/charts.js?20180821"></script>
-        <script src="js/tables.js?20180821"></script>
-        <script src="js/overview.js?20180821"></script>
+        <script src="js/cookies.js?20180824"></script>
+        <script src="js/languages.js?20180824"></script>
+        <script src="js/backend.js?20180824"></script>
+        <script src="js/dropdowns.js?20180824"></script>
+        <script src="js/tabsNavigation.js?20180824"></script>
+        <script src="js/tabsContent.js?20180824"></script>
+        <script src="js/charts.js?20180824"></script>
+        <script src="js/tables.js?20180824"></script>
+        <script src="js/overview.js?20180824"></script>
     </head>
     <body>
         <div class="container-fluid text-center own-container">
@@ -216,6 +216,12 @@
                             </thead>
                         </table>
                     </div>
+                </div>
+                <div id="ContentAlliance">
+                    <div id="ChartAllianceRank" class="own-chart"></div><br/>
+                    <div id="ChartAlliancePoints" class="own-chart"></div><br/>
+                    <div id="ChartAllianceBonusRess" class="own-chart"></div><br/>
+                    <div id="ChartAllianceBonusFight" class="own-chart"></div><br/>
                 </div>
             </div>
         </div>
