added row 'Faction' to TableAllianceMembers

--- a/html/overview.html
+++ b/html/overview.html
@@ -150,6 +150,7 @@
                     <div id="BoxViewColsAllianceMembers" class="own-box">
                         <label>Show columns:</label><br/>
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="UserName">
+                        <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="Faction">
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="Zeit">
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="ScorePoints">
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="CountBases">
@@ -189,6 +190,7 @@
                             data-decimal-separator=",">
                             <thead>
                                 <th class="sortable-column text-center sort-asc">UserName</th>
+                                <th class="sortable-column text-center">Faction</th>
                                 <th class="sortable-column text-center" data-format="date">Zeit</th>
                                 <th class="sortable-column text-center" data-format="number">ScorePoints</th>
                                 <th class="sortable-column text-center" data-format="number">CountBases</th>
