--- a/html/overview.html
+++ b/html/overview.html
@@ -225,6 +225,16 @@
                     <div id="ChartAllianceBonusRess" class="own-chart"></div><br/>
                     <div id="ChartAllianceBonusFight" class="own-chart"></div><br/>
                 </div>
+                <div id="ContentAllianceOverview">
+                    <div id="ChartAllianceOverviewOffense" class="own-chart"></div><br/>
+                    <div id="ChartAllianceOverviewDefense" class="own-chart"></div><br/>
+                    <div id="ChartAllianceOverviewSupport" class="own-chart"></div><br/>
+                </div>
+                <div id="ContentWorldOverview">
+                    <div id="ChartWorldOverviewOffense" class="own-chart"></div><br/>
+                    <div id="ChartWorldOverviewDefense" class="own-chart"></div><br/>
+                    <div id="ChartWorldOverviewSupport" class="own-chart"></div><br/>
+                </div>
             </div>
         </div>
     </body>
