direct link from TableMember to TablePlayerBase

--- a/html/overview.html
+++ b/html/overview.html
@@ -115,7 +115,7 @@
                     </div>
                     <div style="overflow-x: auto;">
                         <table id="TablePlayerBase"
-                            class="table row-hover table-border cell-border mt-4"
+                            class="table striped row-hover table-border cell-border mt-4"
                             data-role="table"
                             data-show-search="false"
                             data-show-rows-steps="false"
@@ -178,7 +178,7 @@
                     </div>
                     <div style="overflow-x: auto;">
                         <table id="TableAllianceMembers"
-                            class="table row-hover table-border cell-border mt-4"
+                            class="table striped row-hover table-border cell-border mt-4"
                             data-role="table"
                             data-show-search="false"
                             data-show-rows-steps="false"
