--- a/html/overview.html
+++ b/html/overview.html
@@ -10,7 +10,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://cdn.rawgit.com/olton/Metro-UI-CSS/6595247250e80f27c590e9ba89522f1676a8297d/build/css/metro-all.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-        <link rel="stylesheet" href="css/overview.css?20180824">
+        <link rel="stylesheet" href="css/overview.css?20180830">
 
         <!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -19,15 +19,15 @@
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
         <script src="https://www.amcharts.com/lib/3/serial.js"></script>
         <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-        <script src="js/cookies.js?20180824"></script>
-        <script src="js/languages.js?20180824"></script>
-        <script src="js/backend.js?20180824"></script>
-        <script src="js/dropdowns.js?20180824"></script>
-        <script src="js/tabsNavigation.js?20180824"></script>
-        <script src="js/tabsContent.js?20180824"></script>
-        <script src="js/charts.js?20180824"></script>
-        <script src="js/tables.js?20180824"></script>
-        <script src="js/overview.js?20180824"></script>
+        <script src="js/cookies.js?20180830"></script>
+        <script src="js/languages.js?20180830"></script>
+        <script src="js/backend.js?20180830"></script>
+        <script src="js/dropdowns.js?20180830"></script>
+        <script src="js/tabsNavigation.js?20180830"></script>
+        <script src="js/tabsContent.js?20180830"></script>
+        <script src="js/charts.js?20180830"></script>
+        <script src="js/tables.js?20180830"></script>
+        <script src="js/overview.js?20180830"></script>
     </head>
     <body>
         <div class="container-fluid text-center own-container">
@@ -229,6 +229,12 @@
                     <div id="ChartAllianceOverviewOffense" class="own-chart"></div><br/>
                     <div id="ChartAllianceOverviewDefense" class="own-chart"></div><br/>
                     <div id="ChartAllianceOverviewSupport" class="own-chart"></div><br/>
+                </div>
+                <div id="ContentBase">
+                    <h5 class="text-center"><a href="" target="_blank" id="LinkCncOpt">CnCOpt</a></h5><br/>
+                    <div id="ChartBaseProduction" class="own-chart"></div><br/>
+                    <div id="ChartBaseValues" class="own-chart"></div><br/>
+                    <div id="ChartBaseRepairTime" class="own-chart"></div><br/>
                 </div>
                 <div id="ContentWorldOverview">
                     <div id="ChartWorldOverviewOffense" class="own-chart"></div><br/>
