fixed scriptname tableAllianceBase.js

--- a/html/overview.html
+++ b/html/overview.html
@@ -27,7 +27,7 @@
         <script src="js/tabsContent.js?20180830"></script>
         <script src="js/charts.js?20180830"></script>
         <script src="js/tables.js?20180830"></script>
-        <script src="js/TableAllianceBase.js?20180830"></script>
+        <script src="js/tableAllianceBase.js?20180830"></script>
         <script src="js/overview.js?20180830"></script>
     </head>
     <body>
@@ -241,9 +241,7 @@
                     <div style="overflow-x: auto;">
                         <table id="TableAllianceBase" class="m-1">
                             <thead>
-                                <tr id="TableAllianceBaseTheadTr">
-                                    <th>tester</th>
-                                </tr>
+                                <tr id="TableAllianceBaseTheadTr"></tr>
                             </thead>
                             <tbody id="TableAllianceBaseTbody"></tbody>
                         </table>
